@@ -56,9 +56,19 @@ if ![runto_main] then {
    return 0
 }
 
-gdb_test "catch exception" \
-         "Catchpoint $any_nb: all Ada exceptions" \
-         "insert catchpoint on all Ada exceptions"
+set msg "insert catchpoint on all Ada exceptions"
+gdb_test_multiple "catch exception" $msg {
+    -re "Catchpoint $any_nb: all Ada exceptions$eol$gdb_prompt $" {
+	pass $msg
+    }
+    -re "Cannot break on __gnat_raise_nodefer_with_msg in this configuration\.$eol$gdb_prompt $" {
+	# If the runtime was not built with enough debug information,
+	# or if it was stripped, we can not test exception
+	# catchpoints.
+	unsupported $msg
+	return -1
+    }
+}
 
 gdb_test "info break" \
          "$info_break_header$eol.*$catch_exception_info" \
