@@ -1,5 +1,10 @@
 2007-01-09  Daniel Jacobowitz  <dan@codesourcery.com>
 
+	* gdb.ada/catch_ex.exp: Call unsupported and stop if the runtime
+	has no debug information.
+
+2007-01-09  Daniel Jacobowitz  <dan@codesourcery.com>
+
 	* gdb.base/annota1.exp: Remove extra send_gdb.
 
 2007-01-09  Jan Kratochvil  <jan.kratochvil@redhat.com>
